# pyeep

./: .gitignore  Makefile  README.md  jack_drums  jack_of_hearts  midi_synth  play  pyeeplay  pyproject.toml  run-mypy  scenes-heartbeat.yaml  scenes-muse.yaml  setup.cfg  setup.py  test-aio  test-gtk  tmux-heartbeat.yaml  tmux-midi.yaml  tmux-muse.yaml
attic/: README.md  gtk.py  lsl.py  pygame.py  test_subprocess.py  volume.py
attic/app/: aio.py  app.py
attic/component/: aio.py  base.py  configmanager.py  connected.py  controller.py  modes.py  subprocess.py
attic/inputs/: base.py  evdev.py  keyboards.py  manual.py
attic/outputs/: color.py  null.py  power.py
attic/scenes/: default.py
pyeep/: aio.py  animation.py  animator.py  app.py  audio.py  bluetooth.py  color.py  deltalist.py  dsp.py  evdev.py  generative.py  gtk.py  inputs.py  jack.py  jackmidi.py  lsl.py  messages.py  midisynth.py  music.py  pattern.py  player.py  pygame.py  shape.py  synth.py  types.py  volume.py  wav.py
pyeep/app/: __init__.py  aio.py  app.py  asynccmd.py  base.py  client.py  component.py  eventscli.py  gtk.py  hub.py  inspector.py  jack.py  server.py  sync.py
scenes/: consent-cfg.yaml  consent-tmux.yaml  dance-cfg.yaml  dance-tmux.yaml  groups.yaml  heartbeat-cfg.yaml  heartbeat-tmux.yaml  midi-tmux.yaml  muse-cfg.yaml  muse-tmux.yaml  musictrainer-cfg.yaml  musictrainer-tmux.yaml  pianotrainer-cfg.yaml  pianotrainer-tmux.yaml
tests/: test_animation.py  test_app.py  test_asynctimer.py  test_component.py  test_deltalist.py  test_messages.py  test_midisynth.py  test_subprocess.py
(+143 files in other folders)
