[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeep"
dynamic = ["version"]
requires-python = ">= 3.13"

[tool.pytest.ini_options]
# addopts = ["--import-mode=importlib", "--ignore=doc"]
addopts = ["--ignore=doc", "--ignore=attic"]

[tool.black]
line-length = 80

[tool.pylint.MAIN]
max-line-length = 80

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
mypy_path = "stubs"
packages = ["pyeep"]
strict = true
enable_error_code = "explicit-override"

[[tool.mypy.overrides]]
module = ["mido", "muselsl", "muselsl.constants", "muselsl.muse", "numba", "numba.experimental", "scipy", "scipy.signal"]
ignore_missing_imports = true

